--- a/style.css
+++ b/style.css
@@ -9,6 +9,20 @@
     height: 70px;
     background: red;
     position: absolute;
-    left: 50px;
     bottom: 120px;
+}
+.gameArea{
+    width: 400px;
+    height: 100vh;
+    background: #2d3436;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+.lines{
+    width: 10px;
+    height: 100px;
+    background: white;
+    position: absolute;
+    margin-left: 195px;
 }
