--- a/style.css
+++ b/style.css
@@ -73,3 +73,9 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
+.music{
+    margin: auto;
+    position: relative;
+    left: 40%;
+
+}
